--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -403,6 +403,18 @@ body.nav-active {
   color: var(--white);
 }
 
+.has-before,
+.has-after {
+  position: relative;
+  z-index: 1;
+}
+
+.has-before::before,
+.has-after::after {
+  content: "";
+  position: absolute;
+}
+
 /*-----------------------------------*\
   #PRELOAD
 \*-----------------------------------*/
@@ -763,7 +775,24 @@ body.nav-active {
   transform: scale(0.6);
 }
 
+.hero-btn img {
+  margin-inline: auto;
+  margin-block-end: 6px;
+}
 
+.hero-btn .span {
+  color: var(--black);
+  font-weight: var(--weight-bold);
+  text-transform: uppercase;
+  letter-spacing: var(--letterSpacing-1);
+  line-height: var(--lineHeight-3);
+}
+
+.hero-btn::after {
+  inset: 0;
+  border: 1px solid var(--gold-crayola);
+  animation: rotate360 15s linear infinite;
+}
 
 /*-----------------------------------*\
   #SERVICE
