--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -496,6 +496,12 @@ body.nav-active {
   }
 }
 
+.has-bg-image {
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+
 /*-----------------------------------*\
   #PRELOAD
 \*-----------------------------------*/
@@ -1165,10 +1171,40 @@ body.nav-active {
 /*-----------------------------------*\
   #TESTIMONIALS
 \*-----------------------------------*/
+.testimonial {
+  padding-block-end: 340px;
+  position: static;
+}
 
+.testimonial .quote {
+  font-size: 7rem;
+  font-family: var(--fontFamily-forum);
+  line-height: 0.7em;
+}
 
+.testimonial .wrapper {
+  display: flex;
+  justify-content: center;
+  gap: 2px;
+  margin-block: 40px 50px;
+}
 
+.testimonial .separator {
+  animation: rotate360 15s linear infinite;
+}
 
+.profile .img {
+  margin-inline: auto;
+  border-radius: var(--radius-circle);
+  margin-block-end: 15px;
+}
+
+.testimonial .profile-name {
+  color: var(--gold-crayola);
+  font-weight: var(--weight-bold);
+  text-transform: uppercase;
+  letter-spacing: var(--letterSpacing-3);
+}
 
 /*-----------------------------------*\
   #RESERVATION
