--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -558,7 +558,6 @@ body.nav-active {
 /*-----------------------------------*\
   #PRELOAD
 \*-----------------------------------*/
-
 .preload {
   position: fixed;
   top: 0;
@@ -627,13 +626,11 @@ body.nav-active {
 /*-----------------------------------*\
   #TOPBAR
 \*-----------------------------------*/
-
 .topbar {display: none;}
 
 /*-----------------------------------*\
   #HEADER
 \*-----------------------------------*/
-
 .header .btn{
   display: none;
 }
@@ -838,7 +835,6 @@ body.nav-active {
 /*-----------------------------------*\
   #HERO
 \*-----------------------------------*/
-
 .hero .slider-btn  {
   display: none;
 }
@@ -975,7 +971,6 @@ body.nav-active {
 /*-----------------------------------*\
   #SERVICE
 \*-----------------------------------*/
-
 .service .section-title {
   margin-block-end: 16px;
 }
@@ -1095,7 +1090,6 @@ body.nav-active {
 /*-----------------------------------*\
   #SPECIAL DISH
 \*-----------------------------------*/
-
 .special-dish-content {
   padding-block: 70px;
 }
@@ -1133,7 +1127,6 @@ body.nav-active {
 /*-----------------------------------*\
   #MENU
 \*-----------------------------------*/
-
 .menu .section-title {
   margin-block-end: 40px;
 }
@@ -1364,14 +1357,58 @@ textarea.input-field {
   line-height: var(--lineHeight-6);
 }
 
-
 /*-----------------------------------*\
   #EVENT
 \*-----------------------------------*/
+.event .section-title {
+  margin-block-end: 40px;
+}
 
+.event-card {
+  position: relative;
+  overflow: hidden;
+}
 
+.event-card .card-content {
+  background-image: var(--gradient-1);
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  padding: 35px 35px 25px;
+}
 
+.event-card .publish-date {
+  position: absolute;
+  top: 30px;
+  left: 25px;
+  padding: 5px 10px;
+  color: var(--gold-crayola);
+  background-color: var(--black);
+  font-weight: var(--weight-bold);
+  letter-spacing: var(--letterSpacing-1);
+  line-height: 14px;
+}
 
+.event-card .card-subtitle {
+  color: var(--gold-crayola);
+  text-transform: uppercase;
+  font-weight: var(--weight-bold);
+  letter-spacing: var(--letterSpacing-2);
+  margin-block-end: 5px;
+}
+
+.event-card .card-banner .img-cover {
+  transition: var(--transition-2);
+}
+
+.event-card:is(:hover, :focus-within) .img-cover {
+  transform: scale(1.05);
+}
+
+.event .btn {
+  margin-inline: auto;
+  margin-block-start: 40px;
+}
 
 /*-----------------------------------*\
   #FOOTER
