--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,16 +2,9 @@
   #index.css
 \*-----------------------------------*/
 
-
-
-
-
-
-
 /*-----------------------------------*\
   #CUSTOM PROPERTY
 \*-----------------------------------*/
-
 :root {
 
   /* Colors */
@@ -87,12 +80,9 @@
   --transition-3: 1000ms ease;
 }
 
-
-
 /*-----------------------------------*\
   #RESET
 \*-----------------------------------*/
-
 *,
 *::before,
 *::after {
@@ -186,11 +176,9 @@ body.nav-active {
   background-color: var(--gold-crayola);
 }
 
-
 /*-----------------------------------*\
   #TYPOGRAPHY
 \*-----------------------------------*/
-
 .display-1,
 .headline-1,
 .headline-2,
@@ -260,11 +248,9 @@ body.nav-active {
   font-size: var(--fontSize-label-2);
 }
 
-
 /*-----------------------------------*\
   #REUSED STYLE
 \*-----------------------------------*/
-
 .container {
   padding-inline: 16px;
 }
@@ -1521,10 +1507,34 @@ textarea.input-field {
 /*-----------------------------------*\
   #BACK TO TOP
 \*-----------------------------------*/
+.back-top-btn {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  background-color: var(--gold-crayola);
+  color: var(--smoky-black-1);
+  font-size: 22px;
+  width: 50px;
+  height: 50px;
+  border-radius: var(--radius-circle);
+  display: grid;
+  place-items: center;
+  box-shadow: var(--shadow-1);
+  transition: var(--transition-1);
+  opacity: 0;
+  visibility: hidden;
+  z-index: 4;
+}
 
+.back-top-btn:is(:hover, :focus-visible) {
+  background-color: var(--white);
+  color: var(--gold-crayola);
+}
 
-
-
+.back-top-btn.active {
+  opacity: 1;
+  visibility: visible;
+}
 
 /*-----------------------------------*\
   #MEDIA QUERIES
