--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1539,27 +1539,20 @@ textarea.input-field {
 /*-----------------------------------*\
   Breakpoints
 \*-----------------------------------*/
-
 /* Break 575px */
 @media (min-width: 575px) {
-
   :root{
     --fontSize-body-2: 2rem;
   }
-
   /* Reused Style */
   :is(.service, .about) .section-text {
     max-width: 420px;
     margin-inline: auto;
   }
-
   .contact-number {
     --fontSize-body-1: 3rem;
   }
-
-  /* =========
-    topbar 
-  =========*/
+  /* ========= topbar =========*/
   .topbar {
     display: block;
     position: fixed;
@@ -1571,111 +1564,80 @@ textarea.input-field {
     z-index: 4;
     transition: var(--transition-1);
   }
-
   .topbar:has(~ .header.active) {
     transform: translateY(-100%);
   }
-
   .topbar-item:not(.link),
   .topbar .separator {
     display: none;
   }
-
   .topbar .container,
   .topbar-item {
     display: flex;
     align-items: center;
   }
-
   .topbar .container {
     justify-content: center;
     gap: 30px;
   }
-
   .topbar-item {
     gap: 6px;
   }
-
   .topbar-item ion-icon {
     --ionicon-stroke-width: 60px;
   }
-
   .topbar-item .span {
     font-size: var(--fontSize-label-1);
   }
-
   .topbar .link {
     transition: var(--transition-1);
   }
-
   .topbar .link:is(:hover, :focus-within) {
     color: var(--gold-crayola);
   }
-
-  /* ========= 
-    Header 
-  =========*/
+  /* ========= Header =========*/
   .header {
     top: 51px;
   }
-
   .header.active {
     top: 0;
   }
-
   .header .btn {
     display: block;
     margin-inline-start: auto;
   }
-
-  /* =========
-    Hero 
-  =========*/
+  /* ========= Hero =========*/
   .hero-btn {
     transform: scale(0.7);
   }
-
-  /* ========= 
-    Services 
-  =========*/
+  /* ========= Services =========*/
   .service .container {
     max-width: 420px;
     margin-inline: auto;
   }
-
-  /* ========= 
-    About 
-  =========*/
+  /* ========= About =========*/
   .about .container {
     gap: 80px;
   }
-
   .about-banner > .w-100 {
     padding-inline-start: 90px;
   }
-
   .about .abs-img-1 {
     width: 285px;
   }
-
   .about .contact-number {
     --fontSize-body-1: 2.4rem
   }
-
-  /* ========= 
-    Menu 
-  =========*/
+  /* ========= Menu =========*/
   .menu-card .title-wrapper {
     display: flex;
     justify-content: flex-start;
     align-items: center;
     gap: 15px;
   }
-
   .menu-card .badge {
     margin-block-start: 0;
   }
-
   .menu-card .span {
     flex-grow: 1;
     display: flex;
@@ -1683,39 +1645,29 @@ textarea.input-field {
     gap: 15px;
     position: relative;
   }
-
   .menu-card .span::before {
     content: "";
     height: 6px;
     flex-grow: 1;
     border-block: 1px solid var(--white-alpha-20);
   }
-
-  /* ========= 
-    Event 
-  =========*/
+  /* ========= Event =========*/
   .event .container {
     max-width: 420px;
     margin-inline: auto;
   }
-
-  /* ========= 
-    Footer 
-  =========*/
+  /* ========= Footer =========*/
   .footer-brand > * {
     max-width: 460px;
     margin-inline: auto;
   }
-
   .footer .input-wrapper {
     position: relative;
   }
-
   .footer .input-field {
     margin-block-end: 0;
     padding-inline-end: 205px;
   }
-
   .footer-brand .btn {
     position: absolute;
     top: 0;
@@ -1723,7 +1675,64 @@ textarea.input-field {
     bottom: 0;
     min-width: max-content;
   }
-
-
-  
+}
+/* Break 768px */
+@media (min-width: 768px) {
+  /* ========= Reused Style ========= */
+  .grid-list {
+    grid-template-columns: 1fr 1fr;
+  }
+  :is(.service, .event) .container {
+    max-width: 820px;
+  }
+  :is(.service, .event) .grid-list li:last-child {
+    grid-column: 1 / 3;
+    width: calc(50% - 20px);
+    margin-inline: auto;
+  }
+  /* ========= Header ========= */
+  .navbar-list {
+    margin-inline: 30px;
+  }
+  /* ========= Hero ========= */
+  .hero .slider-btn {
+    display: grid;
+    position: absolute;
+    z-index: 1;
+    color: var(--gold-crayola);
+    font-size: 2.4rem;
+    border: 1px solid var(--gold-crayola);
+    width: 45px;
+    height: 45px;
+    place-items: center;
+    top: 50%;
+    transform: translateY(-50%) rotate(45deg);
+    transition: var(--transition-1);
+  }
+  .hero .slider-btn ion-icon {
+    transform: rotate(-45deg);
+  }
+  .hero .slider-btn.prev {
+    left: 30px;
+  }
+  .hero .slider-btn.next {
+    right: 30px;
+  }
+  .hero .slider-btn:is(:hover, :focus-visible) {
+    background-color: var(--gold-crayola);
+    color: var(--black);
+  }
+  /* ========= Reservation ========= */
+  .reservation .input-wrapper {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    column-gap: 20px;
+  }
+  .reservation .input-wrapper:nth-child(4) {
+    grid-template-columns: repeat(3, 1fr);
+  }
+  /* ========= footer ========= */
+  .footer-brand {
+    grid-column: 1 / 3 ;
+  }
 }
