--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1695,3 +1695,52 @@ textarea.input-field {
     grid-template-columns: repeat(4, 1fr);
   }
 }
+/* Break 1400px */
+@media (min-width: 1400px) {
+  /* ========= Header ========= */
+  .navbar {
+    margin-inline: auto;
+  }
+  /* ========= About ========= */
+  .about-content {
+    padding-inline-end: 90px;
+  }
+  .about .shape {
+    display: block;
+    top: 46%;
+    left: 0;
+  }
+  /* ========= Plat Special ========= */
+  .special-dish {
+    overflow: visible;
+    position: relative;
+  }
+  .special-dish .shape {
+    display: block;
+    right: 0;
+    z-index: 1;
+  }
+  .special-dish .shape-1 {
+    top: 10%;
+  }
+  .special-dish .shape-2 {
+    bottom: 0;
+    transform: translateY(50%);
+    width: max-content;
+  }
+  /* ========= Fonctionnalité ========= */
+  .features {
+    overflow: visible;
+  }
+  .features .shape {
+    display: block;
+  }
+  .features .shape-1 {
+    top: -100px;
+    right: 0;
+  }
+  .features .shape-2 {
+    bottom: 80px;
+    left: 0;
+  }
+}
